--- a/config/samples/orphanage_v1alpha1_orphanagepolicy.yaml
+++ b/config/samples/orphanage_v1alpha1_orphanagepolicy.yaml
@@ -6,4 +6,6 @@ metadata:
     app.kubernetes.io/managed-by: kustomize
   name: orphanagepolicy-sample
 spec:
-  # TODO(user): Add fields here
+  resourceTypes:
+    - Secret
+    - ConfigMap
